<resources>
    <string name="app_name">Lock In.</string>

    <string name="breaks">Breaks</string>
    <string name="intervals">Intervals</string>
    <string name="tasks">Tasks</string>

    <string name="placeholder_number">0</string>
    <string name="placeholder_hour">01:00:00</string>
    <string name="placeholder_minute">05 min</string>

    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="placeholder_email">Account e-mail</string>
    <string name="password">Password</string>
    <string name="placeholder_password">Account password</string>

    <string name="register">Register</string>
</resources>