<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_blue">
    </FrameLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="125dp">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/transparent_black"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:hint="@string/placeholder_email"
                android:textColorHint="@color/transparent_white"
                android:inputType="textEmailAddress"
                android:background="@color/transparent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/transparent_black"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:hint="@string/placeholder_password"
                android:textColorHint="@color/transparent_white"
                android:inputType="textEmailAddress"
                android:background="@color/transparent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/transparent_black"
            app:cardElevation="0dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:onClick="loginUser"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/transparent"
            android:onClick="openRegister"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>